<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">App Lounge</string>
    <string name="basic_notification_channel_id" translatable="false">applounge_notification</string>
    <string name="warning_notification_channel_id" translatable="false">applounge_warning_notification</string>
    <string name="warning_notification_channel_title" translatable="false">Warning</string>
    <string name="menu_home" weblate_ctx="home">Home</string>
    <string name="menu_categories" weblate_ctx="home">Categories</string>
    <string name="menu_search" weblate_ctx="home">Search</string>
    <string name="menu_updates" weblate_ctx="home">Updates</string>
    <string name="menu_settings" weblate_ctx="home">Settings</string>
    <string name="search_hint" weblate_ctx="search">Search for an app</string>
    <string name="no_apps_found">No apps found…</string>
    <string name="no_trackers">No Trackers</string>
    <string name="apps" weblate_ctx="categories_applications">Applications</string>
    <string name="games" weblate_ctx="categories_games">Games</string>
    <string name="category_icon" weblate_ctx="categories_applications">Category Icon</string>
    <string name="open_source" weblate_ctx="categories_applications">Open Source</string>
    <string name="pwa" weblate_ctx="categories_applications">PWA</string>
    <string name="sign_in_title" weblate_ctx="welcome">Welcome</string>
    <string name="sign_in_desc" weblate_ctx="welcome">Sign in to App Lounge using your Google account, or select the Anonymous mode to sign in privately.</string>
    <string name="sign_in_google" weblate_ctx="welcome">Sign in with Google</string>
    <string name="sign_in_anonymous" weblate_ctx="welcome">Anonymous mode</string>
    <string name="or" weblate_ctx="welcome">Or show only</string>
    <string name="pwa_and_open_source_apps" weblate_ctx="welcome">PWA and Open Source apps</string>
    <string name="tos_agree" weblate_ctx="tos">Accept</string>
    <string name="tos_disagree" weblate_ctx="tos">Reject</string>
    <string name="tos_agree_date">Accepted</string>
    <string name="tos_warning" weblate_ctx="tos">Before we can proceed you must read and agree to the Terms of Service.</string>
    <string name="preference_updates_title" weblate_ctx="settings">Updates</string>
    <string name="preference_update_interval_default">24</string>
    <string name="preference_update_interval_title" weblate_ctx="settings">Update check interval</string>
    <string name="preference_update_wifi_only_title" weblate_ctx="settings">Only on un-metered networks</string>
    <string name="preference_update_wifi_only_description" weblate_ctx="settings">Update apps automatically only on un-metered networks such as Wi-Fi</string>
    <string name="preference_update_apps_from_other_stores_title">Update apps installed by other stores</string>
    <string name="preference_update_apps_from_other_stores_description">Update apps installed from other app stores.\nSuch apps will be attempted to be updated from common apps and open source category.</string>
    <string name="preference_update_install_automatically_title" weblate_ctx="settings">Automatically install updates</string>
    <string name="preference_update_install_automatically_description" weblate_ctx="settings">Download and install app updates in the background</string>
    <string name="preference_update_notify_available_title" weblate_ctx="settings">Show available updates</string>
    <string name="preference_update_notify_available_description">Show a notification when app updates are available</string>
    <string name="Show_applications" weblate_ctx="settings">Show applications:</string>
    <string name="Show_common_apps">Show common apps</string>
    <string name="show_only_open_source_apps">Show open source apps</string>
    <string name="show_only_pwa_apps">Show PWAs</string>
    <string name="about">About</string>
    <string name="app_version_label">App Lounge version</string>
    <string name="os_version">/e/ OS version</string>
    <string name="copied">Copied</string>
    <string name="account" weblate_ctx="settings">Account</string>
    <string name="terms_services" weblate_ctx="settings">Terms of Services</string>
    <string name="user_anonymous" weblate_ctx="settings">Anonymous</string>
    <string name="logout" weblate_ctx="settings">Log Out</string>
    <string name="select_one_source_of_applications">Please select at least one source of applications.</string>
    <string name="login_to_see_gplay_apps">You need to log in to see common apps.</string>
    <string name="login">Login</string>
    <string name="logged_out">Logged out</string>
    <string name="description">Description</string>
    <string name="ok">OK</string>
    <string name="install">Install</string>
    <string name="installing">Installing</string>
    <string name="cancel">Cancel</string>
    <string name="app_icon">App icon</string>
    <string name="not_available" translatable="false">N/A</string>
    <string name="open">Open</string>
    <string name="retry">Retry</string>
    <string name="close">Close</string>
    <string name="more">More</string>
    <string name="update">Update</string>
    <string name="ratings">Ratings</string>
    <string name="rating">Rating</string>
    <string name="rating_description">Score out of 5. Computed using users\' ratings of the app.</string>
    <string name="rating_out_of" translatable="false"><xliff:g id="rating">%1$s</xliff:g>/5</string>
    <string name="privacy">Privacy</string>
    <string name="privacy_score">Privacy Score</string>
    <string name="privacy_description">The Privacy Score is automatically computed from permissions and trackers that are detected in applications. It gives an idea indication about how much an application is likely to be micro-targeting its users.&lt;br /&gt;&lt;br /&gt;Its computing algorithm\'s source code can be &lt;a href="<xliff:g id="source_code">%1$s</xliff:g>"&gt;found here&lt;/a&gt;.&lt;br /&gt;&lt;br /&gt;Trackers detection is performed using &lt;a href="<xliff:g id="exodus">%2$s</xliff:g>"&gt;Exodus Privacy tools&lt;/a&gt;.&lt;br /&gt;&lt;br /&gt;Score out of 10.&lt;br /&gt;&lt;br /&gt;Learn more about how the Privacy Score is computed, its limitations and how you can protect yourself from micro-targeting &lt;a href="<xliff:g id="e_doc">%3$s</xliff:g>&gt;on this page&lt;/a&gt;.</string>
    <string name="privacy_rating_out_of" translatable="false"><xliff:g id="rating">%1$s</xliff:g>/10</string>
    <string name="privacy_analyses">Privacy analyses</string>
    <string name="permissions">Permissions</string>
    <string name="trackers_title">Trackers</string>
    <string name="information">Information</string>
    <string name="version">Version: <xliff:g id="version_code">%1$s</xliff:g></string>
    <string name="updated_on">Updated on: <xliff:g id="version_code">%1$s</xliff:g></string>
    <string name="min_android_version">Requires: <xliff:g id="version_code">%1$s</xliff:g></string>
    <string name="license">License: <xliff:g id="version_code">%1$s</xliff:g></string>
    <string name="package_name">Package name: <xliff:g id="version_code">%1$s</xliff:g></string>
    <string name="install_blocked_anonymous">Paid apps cannot be installed in anonymous mode. Please log into your Google account to install paid apps.</string>
    <string name="install_blocked_google">Paid apps are not supported in App Lounge yet. Just a little more patience, it will soon be the case.</string>
    <string name="message_app_available_later">This app will be available later!</string>
    <string name="unknown_error">Unknown Error!</string>
    <string name="not_enough_storage">There is not enough space available to download this application!</string>
    <string name="app_not_found">Your application was not found.</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="show_more">Show more</string>
    <string name="gplay_data_for_oss">Cannot show Google Play app when only open source apps are allowed.</string>
    <string name="why_open_source_version">Why am I seeing the Open Source version?</string>
    <string name="open_source_apps">Open Source apps</string>
    <string name="duplicate_app_from_sources">Some proprietary apps may also have an Open Source version. Whenever this happens App Lounge shows the Open Source version only, in order to avoid duplicates.</string>
    <string name="downloading">Downloading…</string>
    <string name="system_app">System app</string>
    <string name="additional_file_for">Additional file for %s</string>
    <string name="having_troubles">Having troubles?</string>
    <string name="troubleshootURL" translatable="false">https://doc.e.foundation/support-topics/app_lounge_troubleshooting</string>
    <string name="share">Share</string>
    <string name="restricted_app">[%1$s] Restricted App</string>
    <string name="age_rate_limit_message">You are too young to be able to install %1$s. Please check with your parent your age group is correct or disable parental control to be able to install it.</string>
    <string name="message_inappropriate_content">This app may contain inappropriate content.</string>
    <string name="update_all">Update All</string>
    <string name="checking_updates">Checking Updates...</string>
    <plurals name="updates_notification_title">
        <item quantity="one"><xliff:g id="version_code">%1$d</xliff:g> app update is available</item>
        <item quantity="other"><xliff:g id="version_code">%1$d</xliff:g> app updates are available</item>
    </plurals>
    <string name="all_apps_updated" weblate_ctx="updates">All apps are up-to-date</string>
    <string name="error_signature_mismatch">The update cannot be applied because there is a signature mismatch between the update of %1$s and the version you\'ve installed on your phone. To remedy this you can uninstall %1$s and then install it again from App Lounge. &lt;br /&gt;&lt;br /&gt; Note: This message won\'t appear again.</string>
    <string name="update_error">Update Error!</string>
    <string name="message_retry">Update all has failed. Automatic retries are in progress.</string>
    <string name="message_update_failed">Due to temporary failure, your apps cannot be all updated. Please try again later.</string>
    <string name="message_update_failure_single_app">%1$s\'s update has failed due to a support rule (location, OS version…).</string>
    <string name="own_update_warning_title">Update warning!</string>
    <string name="own_update_warning_description">App Lounge will be closed by the system while installing its own update. Kindly refrain from doing any other task till App Lounge is updated and closed.</string>
    <string name="discover">Discover</string>
    <string name="discover_pwa">Discover PWA</string>
    <string name="top_updated_apps">Open Source Top Updated Apps</string>
    <string name="top_updated_games">Open Source Top Updated Games</string>
    <string name="popular_apps_in_last_24_hours">Open Source Popular Apps In Last 24 Hours</string>
    <string name="popular_games_in_last_24_hours">Open Source Popular Games In Last 24 Hours</string>
    <string name="popular_apps">PWA Popular Apps</string>
    <string name="popular_games">PWA Popular Games</string>
    <string name="topselling_free_apps" weblate_ctx="home">Top Free Apps</string>
    <string name="update_check_intervals" translatable="false">updateCheckIntervals</string>
    <string name="updateNotify" translatable="false">updateNotify</string>
    <string name="auto_install_enabled" translatable="false">updateInstallAuto</string>
    <string name="only_unmetered_network" translatable="false">updateUnmeteredOnly</string>
    <string name="update_apps_from_other_stores" translatable="false">updateAppsFromOtherStores</string>
    <string name="request_exodus_report">Request Exodus report</string>
</resources>