<!--
Copyright (C) 2021  E FOUNDATION
Copyright (C) 2022 - 2023  MURENA SAS
SPDX-FileCopyrightText: 2023 E FOUNDATION <https://gitlab.e.foundation/e/apps/apps/-/wikis/home>

SPDX-License-Identifier: GPL-3.0-or-later
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:iconSpaceReserved="false">

    <Preference
        android:key="@string/having_troubles"
        android:layout="@layout/custom_preferences_troubleshooting_link">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/troubleshootURL"/>
    </Preference>

    <PreferenceCategory
        android:title="@string/preference_updates_title"
        app:allowDividerAbove="false"
        app:allowDividerBelow="true"
        app:iconSpaceReserved="false">
        <ListPreference
            android:defaultValue="@string/preference_update_interval_default"
            android:dialogTitle="@string/preference_update_interval_title"
            android:entries="@array/update_interval_names"
            android:entryValues="@array/update_interval_values"
            android:key="@string/update_check_intervals"
            android:summary="%s"
            android:title="@string/preference_update_interval_title"
            app:singleLineTitle="false"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/updateNotify"
            android:summary="@string/preference_update_notify_available_description"
            android:title="@string/preference_update_notify_available_title"
            app:singleLineTitle="false"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/auto_install_enabled"
            android:summary="@string/preference_update_install_automatically_description"
            android:title="@string/preference_update_install_automatically_title"
            app:singleLineTitle="false"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/only_unmetered_network"
            android:summary="@string/preference_update_wifi_only_description"
            android:title="@string/preference_update_wifi_only_title"
            app:singleLineTitle="false"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/update_apps_from_other_stores"
            android:summary="@string/preference_update_apps_from_other_stores_description"
            android:title="@string/preference_update_apps_from_other_stores_title"
            app:singleLineTitle="false"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/Show_applications"
        app:iconSpaceReserved="false">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="showAllApplications"
            android:title="@string/Show_common_apps"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="showFOSSApplications"
            android:title="@string/show_only_open_source_apps"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="showPWAApplications"
            android:title="@string/show_only_pwa_apps"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/about"
        app:iconSpaceReserved="false">

        <foundation.e.apps.ui.settings.LongPressPreference
            android:key="versionInfo"
            android:title="@string/app_version_label"
            app:singleLineTitle="false"
            app:iconSpaceReserved="false"
            tools:summary="2.2.1" />

    </PreferenceCategory>

</PreferenceScreen>