<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2021-2024 MURENA SAS
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/ratings"
        android:textColor="?android:textColorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/appRatingLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/appRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_available"
                android:textColor="?android:textColorPrimary"
                android:textSize="24sp"
                tools:drawableStart="@drawable/ic_star_blank" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTint="@color/colorAccent"
                android:text="@string/rating"
                android:textColor="?android:textColorPrimary"
                android:textSize="14sp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/appPrivacyScoreLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/loadingBar"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/appPrivacyScore"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/appPrivacyScore"
                tools:visibility="gone" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/requestExodusReport"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:background="@drawable/bg_button_rounded"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/request_exodus_report"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:visibility="invisible"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="@+id/appPrivacyScore"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/appPrivacyScore" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/appPrivacyScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_available"
                android:textColor="?android:textColorPrimary"
                android:textSize="25sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/materialTextView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:drawableStart="@drawable/ic_lock_blank"
                tools:text="3/10"
                tools:visibility="visible" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy"
                android:textColor="?android:textColorPrimary"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/appContentRatingLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:minHeight="48dp"
            android:orientation="vertical"
            android:paddingVertical="0dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/appContentRatingIcon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:importantForAccessibility="no"
                    android:minWidth="24dp"
                    android:minHeight="24dp"
                    android:padding="4dp"
                    android:scaleType="fitCenter"
                    tools:src="@tools:sample/avatars" />

                <ProgressBar
                    android:id="@+id/appContentRatingProgress"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center" />

            </FrameLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/appContentRatingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:textAlignment="center"
                android:textColor="?android:textColorPrimary"
                android:textSize="14sp"
                tools:text="PEGI 3" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>