<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Apps  Quickly and easily install Android apps onto your device!
  ~ Copyright (C) 2021  E FOUNDATION
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/applicationList"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <ProgressBar
        android:id="@+id/placeholder_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/app_icon_card"
        android:layout_width="65dp"
        android:layout_height="65dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_icon"
            android:scaleType="fitXY" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/app_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="4dp"
        android:textColor="?android:textColorPrimary"
        android:textSize="13sp"
        android:singleLine="true"
        android:ellipsize="end"
        app:layout_constraintLeft_toRightOf="@+id/app_icon_card"
        app:layout_constraintRight_toLeftOf="@+id/installButton"
        app:layout_constraintTop_toTopOf="@+id/app_icon_card"
        tools:text="Google Chrome - Fast and Secured" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/app_author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="?android:textColorPrimary"
        android:alpha=".6"
        android:textSize="13sp"
        app:layout_constraintTop_toTopOf="@+id/app_icon_card"
        app:layout_constraintLeft_toLeftOf="@+id/app_title"
        app:layout_constraintRight_toLeftOf="@+id/installButton"
        app:layout_constraintBottom_toBottomOf="@+id/app_icon_card"
        tools:text="App author" />

    <ImageView
        android:id="@+id/icon_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_star"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/app_icon_card"
        app:layout_constraintLeft_toLeftOf="@+id/app_author"/>

    <TextView
        android:id="@+id/app_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/not_available"
        android:textColor="?android:textColorPrimary"
        android:textSize="13sp"
        app:layout_constraintTop_toTopOf="@+id/icon_star"
        app:layout_constraintBottom_toBottomOf="@+id/icon_star"
        app:layout_constraintLeft_toRightOf="@+id/icon_star" />

    <TextView
        android:id="@+id/showMore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/show_more"
        android:textAlignment="center"
        android:textColor="@color/install_button_background"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/app_author"
        app:layout_constraintLeft_toLeftOf="@id/installButton"
        app:layout_constraintRight_toRightOf="@id/installButton"
        app:layout_constraintTop_toBottomOf="@+id/app_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/installButton"
        style="@style/InstallButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/install"
        android:textAllCaps="true"
        android:visibility="invisible"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="5sp"
        android:lines="1"
        app:cornerRadius="4dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/app_title"
        tools:text="@string/installing"/>

    <ProgressBar
        android:id="@+id/progressBarInstall"
        style="?android:attr/progressBarStyle"
        android:layout_width="16dp"
        android:layout_height="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/installButton"
        app:layout_constraintLeft_toLeftOf="@+id/installButton"
        app:layout_constraintRight_toRightOf="@+id/installButton"
        app:layout_constraintTop_toTopOf="@+id/installButton" />

    <LinearLayout
        android:id="@+id/appPrivacyScoreLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/sourceTag"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sourceTag">

        <ImageView
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:src="@drawable/ic_lock" />

        <TextView
            android:id="@+id/app_privacy_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/not_available"
            android:textColor="?android:textColorPrimary"
            android:textSize="13sp"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:visibility="gone" />

    </LinearLayout>

    <TextView
        android:id="@+id/sourceTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_tag_rounded"
        android:paddingStart="6dp"
        android:paddingTop="2dp"
        android:paddingEnd="6dp"
        android:paddingBottom="2dp"
        android:text="Open Source"
        android:textAllCaps="false"
        android:textColor="#626262"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@id/app_rating"
        app:layout_constraintLeft_toRightOf="@+id/app_rating"
        app:layout_constraintRight_toLeftOf="@+id/appPrivacyScoreLayout"
        app:layout_constraintTop_toTopOf="@id/app_rating" />

</androidx.constraintlayout.widget.ConstraintLayout>